--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@
 *.tiff filter=lfs diff=lfs merge=lfs -text
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.bmp filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
